story 4.5 BE
